<resources>
    <string name="app_name">practika9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multi">*</string>
    <string name="devid">/</string>
    <string name="first">Первое значение:</string>
    <string name="second">Второе значение:</string>
    <string name="answers">Ответ:</string>
    <string name="calculator">Калькулятор</string>
    <string name="Continue">Продолжить</string>
</resources>